<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Commander</string>
    <string name="app_long_name">CNC BT Commander</string>
    <string name="title_connected_to">connected to:</string>
    <string name="title_connecting">connecting</string>
    <string name="title_not_connected">BT not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving App.</string>
    <string name="scanning">scanning for devices</string>
    <string name="select_device">Connect/disconnect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="state">"State: "</string>
    <string name="state_x">"X "</string>
    <string name="state_y">"Y "</string>
    <string name="state_z">"Z "</string>
    <string name="btnA_text">Button A</string>
    <string name="btnB_text">Button B</string>
    <string name="btnC_text">Button C</string>
    <string name="btn1_text">B1</string>
    <string name="btn2_text">B2</string>
    <string name="btn3_text">B3</string>
    <string name="btn4_text">B4</string>
    <string name="btn5_text">B5</string>
    <string name="btn6_text">B6</string>
    <string name="btn7_text">B7</string>
    <string name="btn8_text">B8</string>
    <string name="btn9_text">B9</string>
    <string name="btn10_text">B10</string>
    <string name="btn11_text">B11</string>
    <string name="btn12_text">B12</string>
    <string name="load">Load</string>
    <string name="reset">RST</string>
    <string name="start">Start</string>
    <string name="send">Send</string>
    <string name="entercommand">enter command</string>
    <string name="dataL_text">( X, X )</string>
    <string name="status_text">not connected</string>
    <string name="screen_title">Commander</string>
    <string name="normal">N</string>
    <string name="bill">B</string>
    <string name="xhdpi">X</string>
    <string name="large">L</string>
    <string name="vibrating_feedback">Vibrating feedback</string>
    <string name="feedback_of_Buttons">Buttons feedback</string>
    <string name="text_Data_text3">XX.XX</string>
    <string name="drotype">(X)</string>
    <string name="label_Data_text1">GRBL:</string>
    <string name="t_Auto_connect">Auto connect at start up</string>
    <string name="time_out">Communication timeout</string>
    <string name="feed_back">GRBL data display</string>
    <string name="drodisplay">DRO display</string>
    <string name="drores">DRO resolution</string>
    <string name="drorefresh">DRO refresh time</string>
    <string name="smartstreaming">Smart streaming</string>
    <string name="Advanced_Options">- Options for advanced users</string>
</resources>
